--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.85.2"
+    "openai": "^4.85.2",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
